# nuke-plugins

./: .gitignore  README.md  build.py
.github/workflows/: build-plugin.yml  release.yml
BaseSixFour/: BaseSixFour.cpp  CMakeLists.txt  README.md  stb_impl.cpp
Loki/: CMakeLists.txt  LokiDecode.cpp  LokiEncode.cpp  LokiFilter.cpp  LokiMerge.cpp  LokiNoise.cpp  LokiRemove.cpp  LokiShuffle.cpp  LokiSort.cpp  README.md
Loki/loki/: __init__.py  loki_panel.py  loki_watcher.py
WebpIO/: CMakeLists.txt  README.md  webpReader.cpp  webpWriter.cpp
scripts/: assemble-ndk-macos_arm64.ps1  assemble-ndk-windows.ps1  assemble-ndk-windows_x86_64.ps1
